# cgbemu

./: LICENSE  README.md
src/: CMakeLists.txt  cpu.c  cpu.h  debug.h  joypad.c  main.c  makefile  memory.c  memory.h  opcodes.c  opcodes.h  ppu.c  ppu.h
src/core/: gb.c  gb.h
src/cpu/: cpu.c  cpu.h  instructions.c  instructions.h  opcodes.c  opcodes.h
src/debug/: debug.c  debug.h
src/instructions/: instructions.c  instructions.h
src/io/: joypad.c  joypad.h  ppu.c  ppu.h
src/memory/: memory.c  memory.h
